--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         // Gửi câu hỏi đến Backend (API /api/ask-ai)
         fetch('https://my-flashcard-backend.onrender.com/api/ask-ai', {
-          method: 'POST', // Dùng POST vì chúng ta "gửi" dữ liệu
+          method: 'POST', 
           headers: {
             'Content-Type': 'application/json' // Báo cho server biết ta gửi JSON
           },
